header fixed on mobile

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,7 +1,7 @@
 .layout-wrapper {
     display: flex;
     flex-direction: column;
-    padding: 0 15px 15px 15px;
+    padding: 81px 15px;
 
     @media screen and (min-width: 768px){
         flex-direction: row;
