--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -1,7 +1,14 @@
 .side-menu {
     display: flex;
     justify-content: space-between;
-    padding: 8px 0;
+    padding: 0 15px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    background: white;
+    height: 81px;
 
     .side-menu-top {
         display: flex;
@@ -22,6 +29,10 @@
         position: relative;
         justify-content: space-between;
         min-width: 102px;
+        padding: 8px 0;
+        position: relative;
+        width: auto;
+        text-align: center;
 
         &:after {
             content: " ";
